--- a/src/Styles/Register.css
+++ b/src/Styles/Register.css
@@ -14,15 +14,15 @@
     -ms-box-shadow: 0px 10px 9.9px 0.1px rgba(0, 0, 0, 0.1);
     background: #fff; }
   
-    body{
-    line-height: 1.8;
-    font-size: 20px;
-    color: #222;
-    background: #3EB489;
-    padding: 15px 0; 
-  
-    }
-  
+    /*body{*/
+    /*line-height: 1.8;*/
+    /*font-size: 20px;*/
+    /*color: #222;*/
+    /*background: #3EB489;*/
+    /*padding: 15px 0;*/
+
+    /*}*/
+
     .btn {
       display: inline-block;
       font-weight: 400;
@@ -59,10 +59,10 @@
       
     }
   
-  .App-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
+  /*.App-logo {*/
+  /*  height: 40vmin;*/
+  /*  pointer-events: none;*/
+  /*}*/
   
   @media (prefers-reduced-motion: no-preference) {
     .App-logo {
