--- a/FrontEnd/src/Component/Courses/Courses.css
+++ b/FrontEnd/src/Component/Courses/Courses.css
@@ -18,3 +18,16 @@
 .card-body{
     width: 10rem;
 }
+.booklist {
+    width: 90vw;
+    max-width: 1170px;
+    display: grid;
+    gap: 2rem;
+    margin: auto;
+}
+@media screen and (min-width:800px) {
+    .booklist {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+}
