--- a/FrontEnd/src/Component/InsCourse/InsCourse.css
+++ b/FrontEnd/src/Component/InsCourse/InsCourse.css
@@ -6,3 +6,11 @@
     text-decoration: none !important;
     color:black !important;
 }
+.inscourse{
+    align-items: center;
+    box-shadow: 0 0 10px gray;
+    width: 10rem;
+}
+.incourse {
+    text-align: center;
+}
