--- a/FrontEnd/src/Component/Home/Home.css
+++ b/FrontEnd/src/Component/Home/Home.css
@@ -36,7 +36,7 @@
     margin-top: 0 !important;
 }
 .shadow1 {
-    box-shadow: 0xpx 0px 20px gray;
+    box-shadow: 0px 0px 20px gray;
 }
 
 .pop:hover {
